k8s/service.yaml
apiVersion: v1

kind: Service
metadata:
  name: react-cluster-ip-service
spec:
  selector:
    component: web
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1

kind: Service
metadata:
  name: flask-cluster-ip-service
spec:
  selector:
    component: flask
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
